upgrade to Spring Boot 3.4.0 Sync changes in pm and tests with fork origin